# ATIS-Generator

./: .gitignore  CHANGELOG.md  Readme.md  pyproject.toml  script.txt
source/: DEFINE.py  ERROR.py  LIBRARY.py  atis_gui.py  voice.py
