[project]
name = "ATIS-Generator"
version = "0.9.9-Beta"
description = "Default template for PDM package"
authors = [
    {name = "Master_Gui", email = "gui.shifu@outlook.com"},
]
dependencies = [
    "audioread==3.1.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "comtypes==1.4.15",
    "decorator==5.2.1",
    "idna==3.11",
    "joblib==1.5.3",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "msgpack==1.1.2",
    "numba==0.63.1",
    "numpy==2.3.5",
    "packaging==26.0",
    "platformdirs==4.5.1",
    "pooch==1.9.0",
    "pyaes==1.6.1",
    "pycparser==3.0",
    "pykeyboard==0.1.5",
    "pypiwin32==223",
    "Pyrogram==2.0.106",
    "PySocks==1.7.1",
    "pyttsx3==2.99",
    "pywin32==311",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "TgCrypto==1.2.5",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL 2.0"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
